--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ div {
   background-color: whitesmoke;
   width: 250px;
   float: right;
+  border-radius: 50%;
 }
 
 
@@ -64,4 +65,5 @@ div {
   background-color: orange;
   float: right;
   text-align: center;
+  border-radius: 50%;
 }
